Remove fixed height of game msg box on mobile

--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -1,11 +1,6 @@
 #main-menu {
   > p:first-child {
     vertical-align: middle;
-    height: 2.8em; // fixed on small screens, so buttons below stay in place
-
-    @include media-breakpoint-up(md) {
-      height: auto;
-    }
   }
 
   input {
